[tool.poetry]
name = "ncdjango"
version = "1.2.1"
description = "A NetCDF mapserver app for Django"
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
packages = [
    { include = "ncdjango"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
Django = ">=2.2.0"
Pillow = ">=7.2.0"
Shapely = ">=1.7.0"
django-tastypie = "^0.14.0"
netCDF4 = ">=1.5.3"
numpy = "*"
pyproj = "*"
Fiona = "*"
trefoil = "*"
ply = "*"
celery = ">=4.4.6"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
