[tool.poetry]
name = "ncdjango"
version = "1.3.7"
description = "A NetCDF mapserver app for Django"
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
packages = [
    { include = "ncdjango"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "*"
Django = ">=5.2.0"
Pillow = "^9.0.1"
Shapely = ">=1.7.0"
django-tastypie = "^0.14.0"
netCDF4 = ">=1.5.3"
numpy = "^1.24"
pyproj = "*"
Fiona = "*"
trefoil = "0.4.0"
rasterio = "*"
ply = "*"
celery = "^5.2.3"
djangorestframework = "*"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
